maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:13: error: ')' expected but '}' found.
}
^